k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops
  template:
    metadata:
      labels:
        app: devops
    spec:
      containers:
        - name: devops
          image: jrdnbrj/devops:latest
          ports:
            - containerPort: 3000
