k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/acme-challenge-type: http01
spec:
  rules:
  - host: devops.jrdnbrj.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-service
            port:
              number: 80
  tls:
  - hosts:
    - devops.jrdnbrj.com
    secretName: devops-tls-secret
